# vkfft-rs

./: .gitmodules  Cargo.toml  README.md
crates/util/: Cargo.toml
crates/util/src/: lib.rs
crates/vkfft-sys/: Cargo.toml  build.rs  wrapper.c
crates/vkfft-sys/src/: bindings.rs  bindings_linux.rs  bindings_mac.rs  bindings_win.rs  lib.rs
examples/: convolution.rs  simple.rs  tests.rs
src/: app.rs  config.rs  context.rs  error.rs  lib.rs
