[package]
name = "vkfft"
version = "0.2.0"
authors = ["Semio AI, Inc."]
edition = "2018"
resolver = "2"
license = "BSD-3-Clause"
description = "Rust bindings for VkFFT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vkfft-sys = { path = "./crates/vkfft-sys", version = "0.2.0" }
vulkano = "0.35.1"
ash = "0.38.0+1.3.281"
derive_more = { version = "2.0.1", features = ["full"] }

[dev-dependencies]
# util = { path = "./crates/util" }
smallvec = "1.6"
