cargo-features = ["profile-rustflags"]

[package]
name = "vkfft-sys"
version = "0.2.0"
authors = ["Semio AI, Inc."]
edition = "2018"
license = "BSD-3-Clause"
description = "Rust bindings for VkFFT"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.1.8"
regex = "1.10.6"
glob = "0.3.1"

[profile.dev]
rustflags = ["--demangle=gnu"]

[profile.release]
rustflags = ["--demangle=gnu"]